general grid layout

--- a/index.html
+++ b/index.html
@@ -10,70 +10,113 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <!-- first row:: header and toggler -->
+    <div class="header">
+      <h1>Social Media Dashboard</h1>
+      <h6>Total Followers: 23,004</h6>
+    </div>
+    <div class="toggle">
+      Dark Mode
+    </div>
+    <!-- second row: overview of all social media subscribers -->
+    <div class="overview">
+      <div class="card facebook">
+        <div class="tag">
+          <img class="SM-icon" src="images/icon-facebook.svg" alt="facebook-icon">@nathanf</img>
+        </div>
+        <h2 class="SM-number">1987</h2>
+        <p>Followers</p>
+        <div class="daily-number">
+          <img src="images/icon-up.svg" alt="down-icon"/>
+          <p>12 Today</p>
+        </div>
+      </div>
 
-  Social Media Dashboard
-  Total Followers: 23,004
+      <div class="card twitter">
+        <div class="tag">
+          <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon">@nathanf</img>
+        </div>
+        <h2 class="SM-number">1044</h2>
+        <p>Followers</p>
+        <div class="daily-number">
+          <img src="images/icon-up.svg" alt="down-icon"/>
+          <p>99 Today</p>
+        </div>
+      </div>
 
-  Dark Mode
+      <div class="card insta">
+        <div class="tag">
+          <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon">@realnathanf</img>
+        </div>
+        <h2 class="SM-number">11k</h2>
+        <p>Followers</p>
+        <div class="daily-number">
+          <img src="images/icon-up.svg" alt="down-icon"/>
+          <p>1099 Today</p>
+        </div>
+      </div>
 
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
+      <div class="card youtube">
+        <div class="tag">
+          <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon">Nathan F.</img>
+        </div>
+        <h2 class="SM-number">8239</h2>
+        <p>Subscribers</p>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon"/>
+          <p>144 Today</p>
+        </div>
+      </div>
+    </div>
+    <!--third row: subheader  -->
+    <div class="subheader">
+      <h3>Overview - Today</h3>
+    </div>
+    <!-- forth row: detailed info about each SM platform -->
+    <div class="detail">
+      <div class="mini-card">
+        Page Views
+        87
+        3%
+      </div>
+      <div class="mini-card">
+        Likes
+        52
+        2%
+      </div>
+      <div class="mini-card">
+        Likes
+        5462
+        2257%
+      </div>
+      <div class="mini-card">
+        Profile Views
+        52k
+        1375%
+      </div>
+      <div class="mini-card">
+        Retweets
+        117
+        303%
+      </div>
+      <div class="mini-card">
+        Likes
+        507
+        553%
+      </div>
+      <div class="mini-card">
+        Likes
+        107
+        19%
+      </div>
+      <div class="mini-card">
+        Total Views
+        1407
+        12%
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
