some card styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <div class="overview">
       <div class="card facebook">
         <div class="tag">
-          <img class="SM-icon" src="images/icon-facebook.svg" alt="facebook-icon">@nathanf</img>
+          <img class="SM-icon" src="images/icon-facebook.svg" alt="facebook-icon" />
+          <span>@nathanf</span>
         </div>
         <h2 class="SM-number">1987</h2>
-        <p>Followers</p>
+        <p class="followers">Followers</p>
         <div class="daily-number">
           <img src="images/icon-up.svg" alt="down-icon"/>
           <p>12 Today</p>
@@ -35,10 +36,11 @@
 
       <div class="card twitter">
         <div class="tag">
-          <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon">@nathanf</img>
+          <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon" />
+          <span>@nathanf</span>
         </div>
         <h2 class="SM-number">1044</h2>
-        <p>Followers</p>
+        <p class="followers">Followers</p>
         <div class="daily-number">
           <img src="images/icon-up.svg" alt="down-icon"/>
           <p>99 Today</p>
@@ -47,10 +49,11 @@
 
       <div class="card insta">
         <div class="tag">
-          <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon">@realnathanf</img>
+          <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
+          <span>@realnathanf</span>
         </div>
         <h2 class="SM-number">11k</h2>
-        <p>Followers</p>
+        <p class="followers">Followers</p>
         <div class="daily-number">
           <img src="images/icon-up.svg" alt="down-icon"/>
           <p>1099 Today</p>
@@ -59,10 +62,11 @@
 
       <div class="card youtube">
         <div class="tag">
-          <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon">Nathan F.</img>
+          <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon" />
+          <span>Nathan F.</span>
         </div>
         <h2 class="SM-number">8239</h2>
-        <p>Subscribers</p>
+        <p class="followers">Subscribers</p>
         <div class="daily-number">
           <img src="images/icon-down.svg" alt="down-icon"/>
           <p>144 Today</p>
