--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- first row:: header and toggler -->
     <div class="header">
       <h1>Social Media Dashboard</h1>
-      <h6>Total Followers: 23,004</h6>
+      <h5>Total Followers: 23,004</h5>
     </div>
     <div class="toggle">
       Dark Mode
@@ -29,8 +29,8 @@
         <h2 class="SM-number">1987</h2>
         <p class="followers">Followers</p>
         <div class="daily-number">
-          <img src="images/icon-up.svg" alt="down-icon"/>
-          <p>12 Today</p>
+          <img src="images/icon-up.svg" alt="down-icon" />
+          <span>12 Today</span>
         </div>
       </div>
 
@@ -43,11 +43,11 @@
         <p class="followers">Followers</p>
         <div class="daily-number">
           <img src="images/icon-up.svg" alt="down-icon"/>
-          <p>99 Today</p>
+          <span>99 Today</span>
         </div>
       </div>
 
-      <div class="card insta">
+      <div class="card instagram">
         <div class="tag">
           <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
           <span>@realnathanf</span>
@@ -56,7 +56,7 @@
         <p class="followers">Followers</p>
         <div class="daily-number">
           <img src="images/icon-up.svg" alt="down-icon"/>
-          <p>1099 Today</p>
+          <span>1099 Today</span>
         </div>
       </div>
 
@@ -68,8 +68,8 @@
         <h2 class="SM-number">8239</h2>
         <p class="followers">Subscribers</p>
         <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon"/>
-          <p>144 Today</p>
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">144 Today</span>
         </div>
       </div>
     </div>
