--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <h5>Total Followers: 23,004</h5>
     </div>
     <div class="toggle">
-      Dark Mode
+      <h4>Dark Mode</h4>
+      <label name="Dark Mode" class="switch"> 
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
     </div>
     <!-- second row: overview of all social media subscribers -->
     <div class="overview">
@@ -29,7 +33,7 @@
         <h2 class="SM-number">1987</h2>
         <p class="followers">Followers</p>
         <div class="daily-number">
-          <img src="images/icon-up.svg" alt="down-icon" />
+          <img src="images/icon-up.svg" alt="up-icon" />
           <span>12 Today</span>
         </div>
       </div>
@@ -42,7 +46,7 @@
         <h2 class="SM-number">1044</h2>
         <p class="followers">Followers</p>
         <div class="daily-number">
-          <img src="images/icon-up.svg" alt="down-icon"/>
+          <img src="images/icon-up.svg" alt="up-icon"/>
           <span>99 Today</span>
         </div>
       </div>
@@ -55,7 +59,7 @@
         <h2 class="SM-number">11k</h2>
         <p class="followers">Followers</p>
         <div class="daily-number">
-          <img src="images/icon-up.svg" alt="down-icon"/>
+          <img src="images/icon-up.svg" alt="up-icon"/>
           <span>1099 Today</span>
         </div>
       </div>
