detailed mini cards basic styling

--- a/index.html
+++ b/index.html
@@ -83,46 +83,86 @@
     </div>
     <!-- forth row: detailed info about each SM platform -->
     <div class="detail">
-      <div class="mini-card">
-        Page Views
-        87
-        3%
+      <div class="mini-card 1">
+        <h4>Page Views</h4>
+        <img src="images/icon-facebook.svg" alt="facebook-icon" />
+        <h3>87</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">3%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Likes
-        52
-        2%
+
+      <div class="mini-card 2">
+        <h4>Likes</h4>
+        <img src="images/icon-facebook.svg" alt="facebook-icon" />
+        <h3>52</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">2%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Likes
-        5462
-        2257%
+
+      <div class="mini-card 3">
+        <h4>Likes</h4>
+        <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
+        <h3>5462</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">2257%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Profile Views
-        52k
-        1375%
+
+      <div class="mini-card 4">
+        <h4>Profile Views</h4>
+        <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
+        <h3>52k</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">1375%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Retweets
-        117
-        303%
+
+      <div class="mini-card 5">
+        <h4>Retweets</h4>
+        <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon" />
+        <h3>117</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">303%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Likes
-        507
-        553%
+
+      <div class="mini-card 6">
+        <h4>Likes</h4>
+        <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon" />
+        <h3>507</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">553%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Likes
-        107
-        19%
+
+      <div class="mini-card 7">
+        <h4>Likes</h4>
+        <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon" />
+        <h3>107</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">19%</span>
+        </div>
       </div>
-      <div class="mini-card">
-        Total Views
-        1407
-        12%
+
+      <div class="mini-card 8">
+        <h4>Total Views</h4>
+        <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon" />
+        <h3>1407</h3>
+        <div class="daily-number">
+          <img src="images/icon-down.svg" alt="down-icon" />
+          <span class="down-icon">12%</span>
+        </div>
       </div>
+
     </div>
   </div>
 
