dark theme functionality and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" async ></script>
 </head>
 <body>
   <div class="container">
@@ -19,7 +20,7 @@
     <div class="toggle">
       <h4>Dark Mode</h4>
       <label name="Dark Mode" class="switch"> 
-        <input type="checkbox">
+        <input type="checkbox" id="themeSwitch">
         <span class="slider round"></span>
       </label>
     </div>
@@ -87,9 +88,9 @@
         <h4>Page Views</h4>
         <img src="images/icon-facebook.svg" alt="facebook-icon" />
         <h3>87</h3>
-        <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon" />
-          <span class="down-icon">3%</span>
+        <div class="mini-daily-number">
+          <img src="images/icon-up.svg" alt="up-icon" />
+          <span class="up-icon">3%</span>
         </div>
       </div>
 
@@ -97,7 +98,7 @@
         <h4>Likes</h4>
         <img src="images/icon-facebook.svg" alt="facebook-icon" />
         <h3>52</h3>
-        <div class="daily-number">
+        <div class="mini-daily-number">
           <img src="images/icon-down.svg" alt="down-icon" />
           <span class="down-icon">2%</span>
         </div>
@@ -107,9 +108,9 @@
         <h4>Likes</h4>
         <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
         <h3>5462</h3>
-        <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon" />
-          <span class="down-icon">2257%</span>
+        <div class="mini-daily-number">
+          <img src="images/icon-up.svg" alt="up-icon" />
+          <span class="up-icon">2257%</span>
         </div>
       </div>
 
@@ -117,9 +118,9 @@
         <h4>Profile Views</h4>
         <img class="SM-icon" src="images/icon-instagram.svg" alt="instagram-icon" />
         <h3>52k</h3>
-        <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon" />
-          <span class="down-icon">1375%</span>
+        <div class="mini-daily-number">
+          <img src="images/icon-up.svg" alt="up-icon" />
+          <span class="up-icon">1375%</span>
         </div>
       </div>
 
@@ -127,9 +128,9 @@
         <h4>Retweets</h4>
         <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon" />
         <h3>117</h3>
-        <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon" />
-          <span class="down-icon">303%</span>
+        <div class="mini-daily-number">
+          <img src="images/icon-up.svg" alt="up-icon" />
+          <span class="up-icon">303%</span>
         </div>
       </div>
 
@@ -137,9 +138,9 @@
         <h4>Likes</h4>
         <img class="SM-icon" src="images/icon-twitter.svg" alt="twitter-icon" />
         <h3>507</h3>
-        <div class="daily-number">
-          <img src="images/icon-down.svg" alt="down-icon" />
-          <span class="down-icon">553%</span>
+        <div class="mini-daily-number">
+          <img src="images/icon-up.svg" alt="up-icon" />
+          <span class="up-icon">553%</span>
         </div>
       </div>
 
@@ -147,7 +148,7 @@
         <h4>Likes</h4>
         <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon" />
         <h3>107</h3>
-        <div class="daily-number">
+        <div class="mini-daily-number">
           <img src="images/icon-down.svg" alt="down-icon" />
           <span class="down-icon">19%</span>
         </div>
@@ -157,7 +158,7 @@
         <h4>Total Views</h4>
         <img class="SM-icon" src="images/icon-youtube.svg" alt="youtube-icon" />
         <h3>1407</h3>
-        <div class="daily-number">
+        <div class="mini-daily-number">
           <img src="images/icon-down.svg" alt="down-icon" />
           <span class="down-icon">12%</span>
         </div>
